# Cake-Agent

./: .gitignore  CMakeLists.txt  README.md
include/: MediaTools.hpp  OllamaClient.hpp  OpenAIClient.hpp  SystemTools.hpp  Types.hpp
include/client/: ClientTools.hpp  OllamaClient.hpp  OpenAIClient.hpp
include/core/: AssistantManager.hpp  HistoryManager.hpp  InputManager.hpp  ToolManager.hpp  Types.hpp
include/util/: EnvUtils.hpp  MediaUtils.hpp  SystemUtils.hpp  TerminalUtils.hpp
src/: MediaTools.cpp  OllamaClient.cpp  OpenAIClient.cpp  SystemTools.cpp  main.cpp
src/client/: OllamaClient.cpp  OpenAIClient.cpp
src/core/: AssistantManager.cpp  HistoryManager.cpp  InputManager.cpp  ToolManager.cpp
src/util/: MediaUtils.cpp  SystemUtils.cpp
